fix(work-page): add more spacing around images

--- a/src/styles/works.styl
+++ b/src/styles/works.styl
@@ -13,7 +13,7 @@ $workImageBorder = 10px;
 	background rgba($mainBackgroundColor, .1)
 	display inline-block
 	width 100%
-	max-width $mqDesktopMaxWidth
+	max-width $mqTabletMaxWidth
 	border-radius 3px
 	margin-bottom 10px
 
